Fixed logo overlapping bug

--- a/meditate.css
+++ b/meditate.css
@@ -13,5 +13,9 @@ body {
 }
 
 .logo {
-	width:80px;
+  width:80px;
+}
+
+.logo img {
+  width:80px;
 }
